--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -6,7 +6,7 @@
         background-image: linear-gradient(to right,
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)),
-    url(../../images/hero/hero-mob-1x.jpg);
+    url(../images/hero/hero-mob-1x.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     @media (min-device-pixel-ratio: 2),
@@ -15,7 +15,7 @@
             background-image: linear-gradient(to right,
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)),
-        url(../../images/hero/hero-mob-2x.jpg);
+        url(../images/hero/hero-mob-2x.jpg);
     
     }
     @include mobile{
@@ -28,14 +28,14 @@
         background-image: linear-gradient(to right,
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)),
-        url(../../images/hero/hero-tab-1x.jpg);
+        url(../images/hero/hero-tab-1x.jpg);
         @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
             background-image: linear-gradient(to right,
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)),
-        url(../../images/hero/hero-tab-2x.jpg);
+        url(../images/hero/hero-tab-2x.jpg);
         }
     }
     @include desktop{
@@ -44,14 +44,14 @@
         background-image: linear-gradient(to right,
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)),
-    url(../../images/hero/hero-des-1x.jpg);
+    url(../images/hero/hero-des-1x.jpg);
         @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
             background-image: linear-gradient(to right,
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)),
-            url(../../images/hero/hero-des-2x.jpg);
+            url(../images/hero/hero-des-2x.jpg);
         }
     }
 
