--- a/css/main.css
+++ b/css/main.css
@@ -440,7 +440,7 @@ body {
   padding-left: 10px;
   padding-right: 10px;
 }
-.mob-menu__soc-item:not(last-child) {
+.mob-menu__soc-item:not(:last-child) {
   border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
 .mob-menu__soc-link {
