--- a/sass/componets/_mob-menu.scss
+++ b/sass/componets/_mob-menu.scss
@@ -68,7 +68,7 @@
         height: 22px;
         padding-left: 10px;
         padding-right: 10px;
-        &:not(last-child) {
+        &:not(:last-child) {
             border-right: 1px solid rgba(33, 33, 33, 0.2);
         }
     }
